# codecks-mcp-python

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codecks_mcp/: __init__.py  __main__.py
tests/: test_server.py
