[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codecks-mcp"
version = "0.1.0"
description = "MCP server for Codecks project management — 38 tools for cards, decks, milestones, tags, and PM workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.6.0",
]
authors = [{name = "rangogamedev"}]
keywords = ["codecks", "mcp", "model-context-protocol", "project-management", "game-dev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/rangogamedev/codecks-mcp-python"
Issues = "https://github.com/rangogamedev/codecks-mcp-python/issues"

[project.scripts]
codecks-mcp = "codecks_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codecks_mcp", "codecks_mcp.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
